GS-3359 Try to fix long link wrapping

--- a/src/webapp/res/css/school/district_profile.css
+++ b/src/webapp/res/css/school/district_profile.css
@@ -52,6 +52,10 @@ District Overview
     list-style: none;
 }
 
+#districtMainList li {
+    width: 300px;
+}
+
 #districtMainList li a, #districtMainList li a:hover {
 	font: bold 13px/22px Trebuchet MS, sans-serif;
 	color: #39a;
